--- a/src/styles/05_heritage.scss
+++ b/src/styles/05_heritage.scss
@@ -13,7 +13,7 @@
   }
 
   .full-bleed-media-block  {
-    height: 100dvh;
+    height: 100vh;
   }
 
   .image-carousel-block {
